<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacts"
    android:background="#8fce00">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="603dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="28dp"
            android:layout_height="111dp"
            android:layout_weight="1"
            android:src="@drawable/shrekss"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="206dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/TextView5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        >

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="17dp"
            android:layout_height="111dp"
            android:layout_weight="1"
            android:src="@drawable/osel"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/TextView6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="29dp"
            android:layout_height="111dp"
            android:layout_weight="1"
            android:src="@drawable/sbob" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="206dp"
            android:layout_height="79dp"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/TextView7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="0dp"
            android:layout_height="111dp"
            android:layout_weight="0.78"
            android:src="@drawable/therock" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="147dp"
            android:layout_height="79dp"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/TextView8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="26dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:src="@drawable/patrick" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/TextView9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="26dp"
            android:layout_height="106dp"
            android:layout_weight="1"
            android:src="@drawable/g" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_weight="1"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/TextView10" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


