<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="#8fce00">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="443dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView001"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:paddingBottom="100px"
            tools:srcCompat="@drawable/shreks" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="80px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView002"
                    android:layout_width="2dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:paddingLeft="50px"
                    tools:srcCompat="@drawable/plus" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="93dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="150px"
                    android:text="@string/TextView13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView003"
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:paddingLeft="50px"
                    app:srcCompat="@drawable/question" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="160px"
                    android:text="@string/TextView14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView004"
                    android:layout_width="28dp"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:paddingLeft="50px"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="225px"
                    android:text="@string/TextView15" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <EditText
            android:id="@+id/editTextTextPersonName1"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="50px"
            android:text="Введите ваше имя" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="50px"
            android:text="Введите вашу фамилию" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:ems="10"
            android:inputType="phone"
            android:paddingLeft="50px"
            android:text="Введите ваш контактный номер" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="376dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="153dp"
        android:backgroundTint="#557b00"
        android:text="@string/TextView16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.108" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <Button
            android:id="@+id/button5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="#557b00"
            android:text="ㅤ" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/TextView17" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>